# distributed-iot-framework

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  app  docker-compose.yaml  run_network.sh  test.py
boost_examples/: tcp_server.cpp  test.py  udp_client.cpp  udp_server.cpp
boost_lib_testing/: Makefile  tcp_client.cpp  tcp_server.cpp  test.py  udp_client.cpp  udp_server.cpp
example/: CMakeLists.txt  Dockerfile  docker-compose.yaml  main.cpp
src/: communication.cpp  database.cpp  database.h  logger.cpp  main.cpp  message.cpp  protocol.cpp  queue.cpp  udp.cpp  udp_client.cpp  udp_comm.cpp
src/include/: communication.hpp  database.hpp  ip_v4.hpp  logger.hpp  message.hpp  protocol.hpp  queue.hpp  types.hpp  udp.hpp  udp_client.hpp  udp_comm.hpp
src/test/: unit_testing.cpp
test/: udp_test_receive.cpp
tests/: ipv4_test.cpp  udp_test_send.cpp
tests/discovery/: CMakeLists.txt  docker-compose.yaml
tests/known_nodes/: docker-compose.yaml  main.cpp  run.sh
